--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h2 class="estilo" id="atividades">Atividades</h2>
                     <p class="texto">
                     Aqui apresento as atividades desenvolvidas na disciplina <strong>Internet e Aplicação Web</strong> do primeiro módulo:
-                    <a href="https://github.com/silvapamela/front_end_atividade_01/tree/main/Atividades Módulo 01/">Link das atividades.</a>
+                    <a href="https://github.com/silvapamela/front_end_atividade_01/tree/6973c3dddc1059843e32af27c0c446a32eaf4523/Atividades%20M%C3%B3dulo%2001">Link das atividades.</a>
                     </p>
                 </article>
                 <article>
